fix: z-index fix in hero section
navigation menu was untouchable because of z-index issue in .header-section

--- a/client/src/Pages/MainPage/MainPageStyles.scss
+++ b/client/src/Pages/MainPage/MainPageStyles.scss
@@ -42,7 +42,7 @@ $spotThree: #ff0000;
   align-items: center;
   justify-content: center;
   object-fit: cover;
-  // z-index: 1;
+  z-index: 1;
   padding: 0 20px;
 
   .video-background {
